[package]
name = "krustjob"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.9"
futures = "0.3.17"
k8s-openapi = { version = "0.13.1", features = ["v1_21", "schemars"], default-features=false }
kube = { version = "0.60.0", features = ["derive"] }
kube-runtime = "0.60.0"
chrono = { version = "0.4.19", features = ["serde"] }
schemars = { version = "0.8.4", features = ["chrono"] }
serde = "1.0.130"
serde_json = "1.0.68"
serde_yaml = "0.8.21"
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["macros"] }
tracing = "0.1.28"
cron = "0.9.0"
